# DBKurs

./: CMakeLists.txt  connect.h  database.cpp  database.h  dialogwindow.cpp  dialogwindow.h  edit.ui  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  report.ui
